# Dolphin-Zelda-TAS-Edition

Source/Core/Common/: CommonPaths.h  FileUtil.cpp  FileUtil.h  Version.cpp
Source/Core/Common/Logging/: Log.h  LogManager.cpp
Source/Core/Core/: CMakeLists.txt  Core.cpp  Core.h  HotkeyManager.cpp  HotkeyManager.h  Movie.cpp  Movie.h  PatchEngine.cpp
Source/Core/Core/API/: Controller.cpp  Controller.h  Gui.cpp  Gui.h  Memory.h
Source/Core/Core/API/API/: Memory.h
Source/Core/Core/Config/: MainSettings.cpp  MainSettings.h
Source/Core/Core/HW/: GBACore.cpp  GBACore.h  GBAPad.cpp  GBAPad.h  GBAPadEmu.cpp  GBAPadEmu.h  GCPadEmu.cpp  ProcessorInterface.cpp  Wiimote.cpp
Source/Core/Core/HW/EXI/: EXI.cpp
Source/Core/Core/HW/SI/: SI.cpp  SI.h  SI_DeviceGBAEmu.cpp  SI_DeviceGBAEmu.h  SI_DeviceGCController.cpp
Source/Core/Core/HW/WiimoteEmu/: DesiredWiimoteState.cpp  DesiredWiimoteState.h  Dynamics.cpp  EmuSubroutines.cpp  WiimoteEmu.cpp  WiimoteEmu.h
Source/Core/Core/PowerPC/: MMU.cpp  PowerPC.cpp
Source/Core/DolphinQt/: CMakeLists.txt  DolphinQt.vcxproj  GBAWidget.cpp  GBAWidget.h  Host.cpp  HotkeyScheduler.cpp  HotkeyScheduler.h  Main.cpp  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  RenderWidget.cpp  Resources.cpp  Settings.cpp  Settings.h
Source/Core/DolphinQt/Config/ConfigControls/: ConfigControl.h
Source/Core/DolphinQt/Config/Mapping/: HotkeyTAS.cpp  HotkeyTAS.h
Source/Core/DolphinQt/QtUtils/: FlowLayout.cpp  FlowLayout.h
Source/Core/DolphinQt/Scripting/: ScriptFavoritesManager.cpp  ScriptFavoritesManager.h  ScriptFavoritesWidget.cpp  ScriptFavoritesWidget.h  ScriptingWidget.cpp  ScriptingWidget.h  ScriptsListModel.cpp
Source/Core/DolphinQt/Settings/: AdvancedPane.cpp  OnScreenDisplayPane.cpp  OnScreenDisplayPane.h  PathPane.cpp  PathPane.h
Source/Core/DolphinQt/TAS/: DTMEditorDialog.cpp  DTMEditorDialog.h  GBATASInputWindow.cpp  GBATASInputWindow.h  GCTASInputWindow.cpp  GCTASInputWindow.h  IRWidget.cpp  SectionResizer.cpp  SectionResizer.h  StickWidget.cpp  StickWidget.h  TASCheckBox.cpp  TASCheckBox.h  TASInputWindow.cpp  TASInputWindow.h  TASSpinBox.cpp  TASSpinBox.h  WiiTASInputWindow.cpp  WiiTASInputWindow.h
Source/Core/Scripting/: CMakeLists.txt  CopyPythonEmbed.cmake  Scripting.vcxproj  Scripting.vcxproj.filters  ScriptingEngine.cpp
Source/Core/Scripting/Python/: PyScriptingBackend.cpp  PyScriptingBackend.h  coroutine.cpp
Source/Core/Scripting/Python/Modules/: controllermodule.cpp  debugmodule.cpp  doliomodule.cpp  dolphinmodule.cpp  dtmmodule.cpp  dtmmodule.h  eventmodule.cpp  guimodule.cpp  savestatemodule.cpp  utilmodule.cpp
Source/Core/UICommon/: CommandLineParse.cpp  UICommon.cpp
Source/Core/VideoCommon/: OnScreenDisplay.cpp  OnScreenUI.cpp
(+2 files in other folders)
